--- a/window/index.html
+++ b/window/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Wartets</title>
+	<title>Wartets XP</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -14,6 +14,8 @@
 	<meta property="og:image" content="https://wartets.github.io/Wartets/image/app-icon.jpg">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://wartets.github.io/wartets">
+	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 <body>
 	<div id="desktop" class="crt-scanlines">
@@ -24,7 +26,7 @@
 		<div id="start-menu" class="xp-window hidden crt-scanlines">
 			<div class="start-menu-header">
 				<div class="start-menu-profile">
-					<img src="user-male-circle.png" alt="User Icon">
+					<img src="https://api.iconify.design/ic/round-account-circle.svg" alt="User Icon">
 					<span>Wartets</span>
 				</div>
 			</div>
@@ -32,14 +34,14 @@
 				<div class="start-menu-column left-column">
 					<ul class="start-menu-pinned">
 						<li class="start-menu-item" data-action="open-ie">
-							<img src="internet-explorer.png" alt="Internet Explorer">
+							<img src="https://api.iconify.design/fa-brands/internet-explorer.svg" alt="Internet Explorer">
 							<div>
 								<strong>Internet</strong>
 								<span>Internet Explorer</span>
 							</div>
 						</li>
 						<li class="start-menu-item" data-action="open-outlook">
-							<img src="OE2001.webp" alt="Outlook Express">
+							<img src="https://api.iconify.design/mdi/email-outline.svg" alt="Outlook Express">
 							<div>
 								<strong>E-mail</strong>
 								<span>Outlook Express</span>
@@ -48,11 +50,11 @@
 					</ul>
 					<div class="separator"></div>
 					<ul id="start-menu-links" class="start-menu-recent">
-						<li><a href="https://github.com/wartets/Wartets" target="_blank" class="start-menu-item"><img src="https://img.icons8.com/fluent/48/000000/domain.png" alt="Website"><span>Website Source</span></a></li>
-						<li><a href="https://github.com/wartets" target="_blank" class="start-menu-item"><img src="https://img.icons8.com/fluent/48/000000/github.png" alt="GitHub"><span>GitHub</span></a></li>
-						<li><a href="https://soundcloud.com/wartets" target="_blank" class="start-menu-item"><img src="https://img.icons8.com/fluent/48/000000/soundcloud.png" alt="SoundCloud"><span>SoundCloud</span></a></li>
-						<li><a href="https://www.youtube.com/@colinbossu" target="_blank" class="start-menu-item"><img src="https://img.icons8.com/color/48/youtube-play.png" alt="YouTube"><span>YouTube</span></a></li>
-						<li><a href="https://www.youtube.com/@Wartets" target="_blank" class="start-menu-item"><img src="https://img.icons8.com/color/48/youtube-music.png" alt="YouTube Music"><span>YouTube Music</span></a></li>
+						<li><a href="https://github.com/wartets/Wartets" target="_blank" class="start-menu-item"><img src="https://api.iconify.design/mdi/web.svg" alt="Website"><span>Website Source</span></a></li>
+						<li><a href="https://github.com/wartets" target="_blank" class="start-menu-item"><img src="https://api.iconify.design/mdi/github.svg" alt="GitHub"><span>GitHub</span></a></li>
+						<li><a href="https://soundcloud.com/wartets" target="_blank" class="start-menu-item"><img src="https://api.iconify.design/mdi/soundcloud.svg" alt="SoundCloud"><span>SoundCloud</span></a></li>
+						<li><a href="https://www.youtube.com/@colinbossu" target="_blank" class="start-menu-item"><img src="https://api.iconify.design/mdi/youtube.svg" alt="YouTube"><span>YouTube</span></a></li>
+						<li><a href="https://www.youtube.com/@Wartets" target="_blank" class="start-menu-item"><img src="https://api.iconify.design/mdi/youtube.svg" alt="YouTube"><span>YouTube Music</span></a></li>
 					</ul>
 					<div class="all-programs-btn">
 						<span>All Programs</span>
@@ -60,37 +62,36 @@
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg>
 						<ul id="all-programs-submenu" class="submenu hidden">
-							<!-- Categories will be dynamically loaded here -->
 						</ul>
 					</div>
 				</div>
 				<div class="start-menu-column right-column">
 					<ul id="start-menu-places">
 						<li class="start-menu-item" data-action="all-projects">
-							<img src="https://img.icons8.com/fluent/48/folder-invoices.png" alt="My Projects">
+							<img src="https://api.iconify.design/mdi/folder-open-outline.svg" alt="My Projects">
 							<span>My Projects</span>
 						</li>
 						 <li class="start-menu-item disabled">
-							<img src="https://img.icons8.com/color/48/my-computer.png" alt="My Computer">
+							<img src="https://api.iconify.design/mdi/desktop-classic.svg" alt="My Computer">
 							<span>My Computer</span>
 						</li>
 					</ul>
 					<div class="separator"></div>
 					<ul class="start-menu-system">
 						 <li class="start-menu-item disabled">
-							<img src="https://img.icons8.com/color/48/control-panel.png" alt="Control Panel">
+							<img src="https://api.iconify.design/mdi/cog-outline.svg" alt="Control Panel">
 							<span>Control Panel</span>
 						</li>
 						<li class="start-menu-item disabled">
-							<img src="https://img.icons8.com/color/48/help.png" alt="Help">
+							<img src="https://api.iconify.design/mdi/help-circle-outline.svg" alt="Help">
 							<span>Help and Support</span>
 						</li>
 						<li class="start-menu-item disabled">
-							<img src="https://img.icons8.com/color/48/search.png" alt="Search">
+							<img src="https://api.iconify.design/mdi/magnify.svg" alt="Search">
 							<span>Search</span>
 						</li>
 						<li class="start-menu-item disabled">
-							<img src="https://img.icons8.com/fluency/48/run-command.png" alt="Run">
+							<img src="https://api.iconify.design/mdi/console-line.svg" alt="Run">
 							<span>Run...</span>
 						</li>
 					</ul>
@@ -98,11 +99,11 @@
 			</div>
 			<div class="start-menu-footer">
 				<div class="shutdown-btn-item" onclick="alert('Just kidding! No log off here :)');">
-					<img src="https://img.icons8.com/fluency/48/shutdown.png" alt="Log Off">
+					<img src="https://api.iconify.design/mdi/logout.svg" alt="Log Off">
 					<span>Log Off</span>
 				</div>
 				<div class="shutdown-btn-item" onclick="alert('Just kidding! No shutdown here :)');">
-					<img src="https://img.icons8.com/fluency/48/power-off-button.png" alt="Shut Down">
+					<img src="https://api.iconify.design/mdi/power.svg" alt="Shut Down">
 					<span>Turn Off Computer</span>
 				</div>
 			</div>
