Added functionality for cross-reference links.

--- a/lib/library.html
+++ b/lib/library.html
@@ -82,7 +82,7 @@
 		</div>
 	</section>
 
-	<div id="list-header" class="list-header" style="display: none;">
+	<div id="list-header" class="list-header">
 		<div class="header-col title-col" data-sort="title">Title <i class="fa-solid fa-arrow-down"></i></div>
 		<div class="header-col category-col" data-sort="category">Category <i class="fa-solid fa-arrow-down"></i></div>
 		<div class="header-col author-col" data-sort="author">Author <i class="fa-solid fa-arrow-down"></i></div>
