--- a/404.html
+++ b/404.html
@@ -172,7 +172,7 @@
 	<div class="container" role="main" aria-label="Page d'erreur 404">
 		<div class="error-code glitch" data-text="404">404</div>
 		<div class="message">Oups... tu t'es perdu.e là</div>
-		<div class="submessage">Retour à la <a href="/" style="color:#f72585; text-decoration:none; font-weight:700;">page d'accueil</a></div>
+		<div class="submessage">Retour à la <a href="../Wartets" style="color:#f72585; text-decoration:none; font-weight:700;">page d'accueil</a></div>
 	</div>
 </body>
 </html>
