--- a/lib/library.html
+++ b/lib/library.html
@@ -82,6 +82,7 @@
 							<div class="filter-option" data-value="title">Title</div>
 							<div class="filter-option" data-value="category">Category</div>
 							<div class="filter-option" data-value="author">Author</div>
+							<div class="filter-option" data-value="lang">Language</div>
 						</div>
 					</div>
 					<button id="sortOrderBtn" class="view-btn" aria-label="Toggle Sort Order">
@@ -104,6 +105,7 @@
 	<div id="list-header" class="list-header">
 		<div class="header-col title-col" data-sort="title">Title <i class="fa-solid fa-arrow-down"></i></div>
 		<div class="header-col category-col" data-sort="category">Category <i class="fa-solid fa-arrow-down"></i></div>
+		<div class="header-col lang-col" data-sort="lang">Lang <i class="fa-solid fa-arrow-down"></i></div>
 		<div class="header-col author-col" data-sort="author">Author <i class="fa-solid fa-arrow-down"></i></div>
 		<div class="header-col date-col" data-sort="date">Date <i class="fa-solid fa-arrow-down"></i></div>
 	</div>
