--- a/window/index.html
+++ b/window/index.html
@@ -19,6 +19,8 @@
 	<script src="https://unpkg.com/webamp@1.4.2/built/webamp.bundle.min.js"></script>
 </head>
 <body>
+	<div id="iframe-drag-overlay" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 9999999; display: none;"></div>
+
 	<div id="boot-screen">
 		<div class="boot-logo-container">
 			<img src="Unofficial_Windows_logo_variant_-_2002–2012_(Multicolored).svg.png" alt="Windows XP" class="boot-logo">
