--- a/poetry/index.html
+++ b/poetry/index.html
@@ -33,9 +33,9 @@
 
 	<header class="site-header noselect">
 		<div class="header-content">
-			<h1>Document Library</h1>
+			<h1>Thought's Library</h1>
 			<h4>Colin Bossu Réaubourg</h4>
-			<p>A curated collection of papers, notes, and documents.</p>
+			<p>A collection of poems, thoughts and writings.</p>
 		</div>
 	</header>
 
@@ -148,7 +148,7 @@
 
 	<footer class="site-footer">
 		<div class="footer-content">
-			<p class="copyright">&copy; 2025. All rights reserved.</p>
+			<p class="copyright">&copy; 2026. All rights reserved.</p>
 			<nav class="footer-nav">
 				<span>Designed by <a href="https://wartets.github.io/Wartets/" target="_blank" rel="noopener noreferrer" class="footer-link">Wartets <i class="fa-solid fa-arrow-up-right-from-square"></i></a></span>
 				<span class="divider"></span>
