--- a/lib/library.html
+++ b/lib/library.html
@@ -17,7 +17,7 @@
 	<meta name="robots" content="index, follow">
 	<meta property="og:title" content="Wartets' Library | Digital Documents">
 	<meta property="og:description" content="Explore a curated collection of digital documents and academic papers.">
-	<meta property="og:image" content="https://wartets.github.io/Wartets/image/app-icon.jpg">
+	<meta property="og:image" content="https://wartets.github.io/Wartets/img/Document-Library-card.png">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://wartets.github.io/Wartets/library.html">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
