--- a/lib/library.html
+++ b/lib/library.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 	<title>Wartets' Library</title>
 	<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-	<link rel="preconnect" href="https://wartets.github.io" crossorigin>
-	<link rel="canonical" href="https://wartets.github.io/Wartets/library.html">
+	<link rel="preconnect" href="https://wartets.github.io/Wartets/lib/" crossorigin>
+	<link rel="canonical" href="https://wartets.github.io/Wartets/lib/library.html">
 	<link rel="icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
 	<link rel="apple-touch-icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
 	<meta name="theme-color" content="#050505">
@@ -19,7 +19,7 @@
 	<meta property="og:description" content="Explore a curated collection of digital documents and academic papers.">
 	<meta property="og:image" content="https://wartets.github.io/Wartets/img/Document-Library-card.png">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://wartets.github.io/Wartets/library.html">
+	<meta property="og:url" content="https://wartets.github.io/Wartets/lib/library.html">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Flip.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
