--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	<header class="site-header noselect">
 		<div class="header-content">
-			<h1>Wartets' Projects</h1>
+			<h1>Wartets' Pr<span id="easterEggO" role="button" tabindex="0" aria-label="Secret O">O</span>jects</h1>
 			<h4>Colin Bossu Réaubourg</h4>
 			<p>Interactive simulations, games, experiments, and digital creations.</p>
 		</div>
