Add scanlines overlay and tweak project icons

--- a/window/index.html
+++ b/window/index.html
@@ -251,6 +251,9 @@
 
 	<script src="../projects.js"></script>
 	<script src="../lib/documents.js"></script>
+	
+	<div id="scanlines-overlay" aria-hidden="true"></div>
+
 	<script src="script.js"></script>
 </body>
 </html>
